2020-07-23  David Byers  <david.byers@liu.se>

	Fix issue #3:
	* olc.el (olc-parse-code): Save match data.
	(olc-is-valid): Save match data.
	(olc-shorten-compound): Save match data.
	(olc-recover-compound): Save match data.
	(olc-is-valid): Rewrote as string operations.
	(olc-value-mapping): Changed to defconst.
	(olc-digit-mapping): Changed to defconst.
	(olc-is-short): Operate on string.
	(olc-is-full): Operate on string.

	Fix issue #1 more properly:
	* olc.el (olc-recover): Honor format arg when dealing with full
	codes.
	(olc-recover-compound): Defer to olc-recover when dealing with
	full codes.

	Fix issue #1 (olc-recover-compound fails on full codes):
	* test/olctest.el: Improved test macros. Tests for issue 1.

	* olc.el (general): Whitespace fixes.
	(olc-recover-error): New error.
	(olc-recover-compound): New argument list. Type checks. Handle
	full codes being passed.

2020-07-22  David Byers  <david.byers@liu.se>

	Fix test cases:
	* test/olctest.el: Use keyword args in test cases. Replace
	interactive-only functions with better ones. Implement testing for
	batch mode.

	Clean up for melpa:
	* olc.el (olc-encode): Use #' instead of ' in apply. Enable
	lexical binding. Rename unused loop variable so it is ignored by
	the byte compiler.
	* olc.el (olc-shorten-compound): Use #' instead of ' in request.
	* olc.el (olc-recover-compound): Use #' instead of ' in request.
	* Makefile: New file.

	Rename some functions:
	* olc.el (olc-shorten-compound): Renamed from olc-shorten-geo to
	better match Google's terminology in their plus codes api.
	(olc-recover-compound): Same.

	Implement olc-shorten-geo and clean up:
	* olc.el (olc-shorten-geo): New function.
	(olc-encode): Use cl-defun and keyword args.
	(olc-shorten): Use cl-defun and keyword args.
	(olc-recover): Use cl-defun and keyword args.
	(olc-recover-geo): Use cl-defun and keyword args. Renamed from
	olc-recover-string.

	* olc.texi (Functions): Updated to match code changes.
